# Open-Document-Manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Readme.md  docker-compose.yml
api/: .dockerignore  Dockerfile  Readme.md  pyproject.toml
api/src/: main.py
api/src/config/: config.py  logger.py  middlewares.py
api/src/core/: core.py
api/src/core/chat/api/: routes.py
api/src/core/chat/api/dto/: requests.py  responses.py
api/src/core/chat/application/: service.py
api/src/core/chat/domain/: model.py  repository.py
api/src/core/chat/exceptions/: chat.py
api/src/core/chat/infrastructure/: db_model.py  repository_impl.py
api/src/core/document/api/: routes.py
api/src/core/document/api/dto/: requests.py  responses.py
api/src/core/document/application/: service.py
api/src/core/document/domain/: model.py  repository.py
api/src/core/document/exceptions/: document.py
api/src/core/document/infrastructure/: db_model.py  pg_events.py  repository_impl.py
api/src/core/message/api/: routes.py
api/src/core/message/api/dto/: requests.py  responses.py
api/src/core/message/application/: service.py
api/src/core/message/domain/: model.py  repository.py
api/src/core/message/exceptions/: workspace.py
api/src/core/message/infrastructure/: db_model.py  pg_events.py  repository_impl.py
api/src/core/run/api/: routes.py
api/src/core/run/api/dto/: requests.py  responses.py
api/src/core/run/application/: service.py
api/src/core/run/domain/: model.py  repository.py
api/src/core/run/exceptions/: run.py
api/src/core/run/infrastructure/: db_model.py  pg_events.py  repository_impl.py
api/src/core/shared/api/: routes.py
api/src/core/shared/infrastructure/: pg_channels.py  timestamps.py  uuid.py
api/src/core/workspace/api/: routes.py
api/src/core/workspace/api/dto/: requests.py  responses.py
api/src/core/workspace/application/: service.py
api/src/core/workspace/domain/: model.py  repository.py
api/src/core/workspace/exceptions/: workspace.py
api/src/core/workspace/infrastructure/: db_model.py  repository_impl.py
api/src/db/: events.py  sql_alchemy_unit_of_work.py  utils.py
api/src/storage/: s3_adapter.py
api/test/: populate_db_script.py  upload_from_presigned_url.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
leann-indexer/: .dockerignore  Dockerfile  pyproject.toml
leann-indexer/src/: main.py
leann-indexer/src/channels/: pg_channel_listener.py
leann-indexer/src/config/: config.py
leann-indexer/src/core/chat/application/: chat_service.py  translation_service.py
leann-indexer/src/core/chat/domain/: model.py
leann-indexer/src/core/chat/infrastructure/: chat_service_impl.py  translation_service_impl.py
leann-indexer/src/core/embeddings/application/: embeddings_service.py  service.py
leann-indexer/src/core/embeddings/domain/: model.py
leann-indexer/src/core/embeddings/infrastructure/: embeddings_service_impl.py  repository_impl.py
leann-indexer/src/core/embeddings/schemas/: requests.py
leann-indexer/src/core/shared/: runs.py
leann-indexer/src/core/shared/infrastructure/: pg_channels.py
leann-indexer/src/db/: db.py  db_adapter.py
leann-indexer/src/events/: chat.py  controller.py  embeddings.py
leann-indexer/src/infrastructure/: db_adapter.py  events.py  leann_adapter.py  ollama_translator.py  postgres_channels_listeners.py  s3_adapter.py
leann-indexer/src/storage/: s3_adapter.py  storage.py
leann-indexer/src/vector_index/: leann_adapter.py  vector_index.py
leann-vector-index/: Dockerfile
(+25 files in other folders)
