[project]
name = "Open-Document-Manager-API"
version = "0.1.0"
description = "Monorepo for API and AI Agent services"
requires-python = "==3.12.*"
# Common dependencies to agent and api
dependencies = [
    "torch==2.2.2+cpu",
    "leann[cpu]>=0.3.7",
    "loguru>=0.7.3",
    "psycopg>=3.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pre-commit>=4.1.0",
    "isort>=8.0.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
src = ["api", "agent"]

[tool.ruff.lint]
select = ["E", "W", "F", "FAST", "RUF", "I", "SIM", "B", "ARG", "RET", "UP", "T20", "C4"]
ignore = ["B904", "B008"]
fixable = ["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["api", "agent"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
index-strategy = "first-index"